# techreport-from-utube

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  docker-compose.yml  issues-vertical.md  issues-vertical.preregister-backup-20260423-094811.md  prd.md  techspec.md
.github/workflows/: README.md  deploy-staging.yml  e2e.yml  lint.yml  security.yml  test.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py  schemas.py
backend/app/adapters/: claude_adapter.py  ollama_adapter.py  openai_adapter.py  youtube_data_adapter.py  youtube_transcript_adapter.py
backend/app/api/: analyze.py  health.py  search.py
backend/app/observability/: token_counter.py
backend/app/pipeline/: analysis_pipeline.py  markdown_renderer.py  system_prompt.py
backend/app/ports/: llm_provider.py  transcript_port.py  youtube_search_port.py
backend/app/repository/: file_repository.py
backend/app/services/: search_service.py
backend/tests/: test_analyze_route.py  test_claude_adapter.py  test_config.py  test_file_repository.py  test_health.py  test_llm_provider_selection.py  test_main.py  test_markdown_renderer.py  test_search_route.py  test_token_counter.py  test_youtube_adapter.py
docs/: education-notes.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalyzingView.tsx  AppShell.tsx  BrandMark.tsx  DashboardHeader.tsx  EmptyState.tsx  ErrorBanner.tsx  KeywordInputView.tsx  LogStream.tsx  ProgressBar.tsx  ReportResultView.tsx  Sidebar.tsx  StatusDot.tsx  VideoCard.tsx  VideoListView.tsx
frontend/src/hooks/: useGlobalShortcuts.ts  useHealth.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: useAppStore.ts
frontend/tests/: AnalyzingView.test.tsx  App.test.tsx  EmptyState.test.tsx  ErrorBanner.test.tsx  KeywordInputView.test.tsx  ReportResultView.test.tsx  VideoCard.test.tsx  setup.ts
frontend/tests/e2e/: a11y.spec.ts  fixtures.ts  no-results.spec.ts  no-transcript.spec.ts  search-success.spec.ts  smoke.spec.ts
reports/: .gitkeep
scripts/: smoke.sh
