[project]
name = "techreport-backend"
version = "0.1.0"
description = "TechReport from YouTube — FastAPI backend (YouTube + Claude pipeline)"
requires-python = ">=3.11"
authors = [{ name = "Insang Cho", email = "insang@hansung.ac.kr" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "google-api-python-client>=2.137.0",
    # Pinned to 0.x: the 1.0 release removed the static `get_transcript` method
    # our adapter relies on. Migration to the 1.x fetch() API tracked in #44.
    "youtube-transcript-api>=0.6.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PT"]
# E501: long-line noise handled by formatter; B008: FastAPI `Depends()` default
#   argument is the idiomatic pattern and shouldn't be flagged.
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
